# u-AOL-RM

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt  streamlit_app.py
configs/: model_config.yaml  risk_rules.yaml
data/sample/: sample_conversations.jsonl
docs/: questionnaire_template.md  research_protocol_template.md
scripts/: evaluate_template.py  run_pipeline.py
src/tcmh_chatbot/: __init__.py
src/tcmh_chatbot/chatbot/: __init__.py  engine.py
src/tcmh_chatbot/core/: __init__.py  config.py  schemas.py
src/tcmh_chatbot/evaluation/: __init__.py  metrics.py
src/tcmh_chatbot/graph/: __init__.py  tpcg_builder.py  xai_visualizer.py
src/tcmh_chatbot/nlp/: __init__.py  emotion_detector.py  symptom_trigger_extractor.py
src/tcmh_chatbot/prediction/: __init__.py  gnn_predictor_stub.py  rule_based_predictor.py
tests/: test_rule_based_predictor.py  test_tpcg_builder.py
